# storage/api-docs/api-docs.json
@@ -19,123 +19,7 @@
         }
     ],
     "paths": {
-        "/account": {
-            "post": {
-                "tags": [
-                    "/account"
-                ],
-                "summary": "Account",
-                "description": "Rota responsavel por criar account!",
-                "operationId": "cd73684cb2b781a6453236e15acf82f2",
-                "requestBody": {
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "required": [
-                                    "name",
-                                    "email",
-                                    "password",
-                                    "level_id"
-                                ],
-                                "properties": {
-                                    "name": {
-                                        "type": "string"
-                                    },
-                                    "email": {
-                                        "type": "string"
-                                    },
-                                    "password": {
-                                        "type": "string"
-                                    },
-                                    "address": {
-                                        "type": "string"
-                                    },
-                                    "number": {
-                                        "type": "number"
-                                    },
-                                    "phone": {
-                                        "type": "string"
-                                    },
-                                    "complement": {
-                                        "type": "string"
-                                    }
-                                },
-                                "type": "object",
-                                "example": {
-                                    "name": "Fulano de Tal",
-                                    "email": "fulano@gmail.com",
-                                    "password": "123456",
-                                    "address": "Rua teste ",
-                                    "phone": "(73) 988203656",
-                                    "number": "18",
-                                    "complement": "bloco10ap23"
-                                }
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "Success"
-                    },
-                    "201": {
-                        "description": "Created"
-                    },
-                    "401": {
-                        "description": "Unauthorized"
-                    },
-                    "403": {
-                        "description": "Forbidden"
-                    },
-                    "404": {
-                        "description": "Not Found"
-                    },
-                    "409": {
-                        "description": "Conflict"
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
-                    }
-                }
-            }
-        },
         "/account/me": {
-            "get": {
-                "tags": [
-                    "/account"
-                ],
-                "summary": "Account",
-                "description": "Responsible route recover account data!!",
-                "operationId": "228c02411f7bff10c6d4197280066e8c",
-                "responses": {
-                    "200": {
-                        "description": "Success"
-                    },
-                    "201": {
-                        "description": "Created"
-                    },
-                    "401": {
-                        "description": "Unauthorized"
-                    },
-                    "403": {
-                        "description": "Forbidden"
-                    },
-                    "404": {
-                        "description": "Not Found"
-                    },
-                    "409": {
-                        "description": "Conflict"
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
-                    }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
-            },
             "patch": {
                 "tags": [
                     "/account"
@@ -184,44 +68,6 @@
                         }
                     }
                 },
-                "responses": {
-                    "200": {
-                        "description": "Success"
-                    },
-                    "201": {
-                        "description": "Created"
-                    },
-                    "401": {
-                        "description": "Unauthorized"
-                    },
-                    "403": {
-                        "description": "Forbidden"
-                    },
-                    "404": {
-                        "description": "Not Found"
-                    },
-                    "409": {
-                        "description": "Conflict"
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
-                    }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
-            }
-        },
-        "/account/refresh": {
-            "get": {
-                "tags": [
-                    "/account"
-                ],
-                "summary": "Account",
-                "description": "Responsible route refresh token!",
-                "operationId": "5de51af5f3f2e5d9432d86d22610c50a",
                 "responses": {
                     "200": {
                         "description": "Success"
